added summary writer

--- a/Code/SAC2019.ipynb
+++ b/Code/SAC2019.ipynb
@@ -49,9 +49,10 @@
         "import gym\n",
         "import random\n",
         "import numpy as np\n",
-        "from collections import deque"
+        "from collections import deque\n",
+        "from torch.utils.tensorboard import SummaryWriter"
       ],
-      "execution_count": 9,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -63,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -97,6 +98,7 @@
         "def mini_batch_train(env, agent, max_episodes, max_steps, batch_size):\n",
         "    episode_rewards = []\n",
         "    update_step = 0\n",
+        "    writer = SummaryWriter()\n",
         "\n",
         "    for episode in range(max_episodes):\n",
         "        state = env.reset()\n",
@@ -114,6 +116,8 @@
         "\n",
         "            if done or step == max_steps-1:\n",
         "                episode_rewards.append(episode_reward)\n",
+        "                writer.add_scalar('reward',reward,episode)\n",
+        "                writer.flush()\n",
         "                break\n",
         "\n",
         "            state = next_state\n",
@@ -122,7 +126,7 @@
         "\n",
         "    return episode_rewards"
       ],
-      "execution_count": 11,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -172,7 +176,7 @@
         "  def __len__(self):\n",
         "      return len(self.buffer)"
       ],
-      "execution_count": 12,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -269,7 +273,7 @@
         "\n",
         "        return action, log_pi"
       ],
-      "execution_count": 13,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -404,7 +408,7 @@
         "        #Ende Aufgabe 2\n",
         "        self.update_step += 1"
       ],
-      "execution_count": 14,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -432,64 +436,24 @@
         "agent = SACAgent(env, gamma, tau, alpha, q_lr, p_lr, a_lr, buffer_maxlen)\n",
         "\n",
         "# train\n",
-        "episode_rewards = mini_batch_train(env, agent, 50, 500, 64)"
+        "episode_rewards = mini_batch_train(env, agent, 10, 500, 64)"
       ],
-      "execution_count": 15,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Episode 0: -1175.2288072053614\n",
-            "Episode 1: -1156.6081386229298\n",
-            "Episode 2: -981.9939696418365\n",
-            "Episode 3: -1325.7570960621256\n",
-            "Episode 4: -1514.8417311586368\n",
-            "Episode 5: -1686.2116202376767\n",
-            "Episode 6: -1560.7234628736264\n",
-            "Episode 7: -1255.6478056136048\n",
-            "Episode 8: -1458.607518899463\n",
-            "Episode 9: -1253.9154947472118\n",
-            "Episode 10: -1011.8425582692248\n",
-            "Episode 11: -1253.337758709185\n",
-            "Episode 12: -1173.6968864365797\n",
-            "Episode 13: -924.5078927195033\n",
-            "Episode 14: -1078.0630374252219\n",
-            "Episode 15: -903.2607908675004\n",
-            "Episode 16: -1231.9929384520995\n",
-            "Episode 17: -729.6969326492107\n",
-            "Episode 18: -1069.7354052546896\n",
-            "Episode 19: -923.9648213602012\n",
-            "Episode 20: -909.7307791261634\n",
-            "Episode 21: -645.4904856152393\n",
-            "Episode 22: -1055.2615035940005\n",
-            "Episode 23: -250.29004174945496\n",
-            "Episode 24: -396.30596631272186\n",
-            "Episode 25: -1148.5821207343542\n",
-            "Episode 26: -240.37079208531776\n",
-            "Episode 27: -546.2589847145306\n",
-            "Episode 28: -926.9804718725264\n",
-            "Episode 29: -1322.1284332834\n",
-            "Episode 30: -701.0185111627345\n",
-            "Episode 31: -1017.4771230305029\n",
-            "Episode 32: -292.96943021265076\n",
-            "Episode 33: -246.82380760492117\n",
-            "Episode 34: -127.3836756696064\n",
-            "Episode 35: -126.89190973266628\n",
-            "Episode 36: -1.9866712266326263\n",
-            "Episode 37: -246.09183169362453\n",
-            "Episode 38: -383.0409080584362\n",
-            "Episode 39: -1701.8021190573124\n",
-            "Episode 40: -262.5530420377246\n",
-            "Episode 41: -117.72713602899815\n",
-            "Episode 42: -1718.4367828859722\n",
-            "Episode 43: -126.01682275901248\n",
-            "Episode 44: -259.5373008544668\n",
-            "Episode 45: -121.49922714418746\n",
-            "Episode 46: -126.72345673449772\n",
-            "Episode 47: -240.75922100943052\n",
-            "Episode 48: -121.34648725794034\n",
-            "Episode 49: -124.5435018934022\n"
+            "Episode 0: -1625.2501556654033\n",
+            "Episode 1: -1301.3473248240052\n",
+            "Episode 2: -1184.3456148167388\n",
+            "Episode 3: -1563.3529550155645\n",
+            "Episode 4: -1352.1691877181577\n",
+            "Episode 5: -1779.9231769425564\n",
+            "Episode 6: -1187.5441732092947\n",
+            "Episode 7: -1257.384335106917\n",
+            "Episode 8: -1434.148479431876\n",
+            "Episode 9: -942.3971278978319\n"
           ]
         }
       ]
@@ -502,9 +466,9 @@
         "colab": {}
       },
       "source": [
-        "%tensorboard --logdir summaries"
+        "%tensorboard --logdir runs"
       ],
-      "execution_count": 16,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -514,6 +478,13 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ]
 }
