--- a/Code/SAC2019.ipynb
+++ b/Code/SAC2019.ipynb
@@ -69,6 +69,7 @@
       "outputs": [],
       "source": [
         "\n",
+        "\n",
         "# SAC Params\n",
         "gamma = 0.99\n",
         "tau = 0.01\n",
@@ -78,6 +79,16 @@
         "q_lr = 3e-4\n",
         "p_lr = 3e-4\n",
         "buffer_maxlen = 1000000\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "%load_ext tensorboard"
       ]
     },
     {
