--- a/Code/SAC2019.ipynb
+++ b/Code/SAC2019.ipynb
@@ -25,10 +25,9 @@
         "\n",
         "0) optional - führt das Notbook aus und schaut euch die Ergebnisse an \n",
         "\n",
-        "1) verändert den Temperatur Wert (aplha) und schaut, wie sich die Ergebnisse verändern\n",
+        "1) verändert den Temperatur Wert (alpha) und schaut, wie sich die Ergebnisse verändern\n",
         "\n",
-        "2) Wie in der Weiterentwicklung soll der Temperatur Wert mittels Gradient descent implementiert werden.\n",
-        "    Verändere den Actor so, dass der Temperatur Wert mittels Gradient descent angepasst wird."
+        "2) Erweitere den Agenten um einen lerndenden Temperture Wert. Implementiere dazu unter Aufgabe 2 für den aplha Wert einen descending gradient. Im Agent ist sind dazu mit traget_entropie log_alpha und alpha_optim mögliche Hilfen gegeben. "
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -52,7 +51,7 @@
         "from collections import deque\n",
         "from torch.utils.tensorboard import SummaryWriter"
       ],
-      "execution_count": 25,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -64,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -83,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -137,7 +136,7 @@
         "\n",
         "    return episode_rewards"
       ],
-      "execution_count": 27,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -187,7 +186,7 @@
         "  def __len__(self):\n",
         "      return len(self.buffer)"
       ],
-      "execution_count": 28,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -284,7 +283,7 @@
         "\n",
         "        return action, log_pi"
       ],
-      "execution_count": 29,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -410,16 +409,16 @@
         "                target_param.data.copy_(self.tau * param + (1 - self.tau) * target_param)\n",
         "\n",
         "        # Aufgabe 2\n",
-        "        alpha_loss = (self.log_alpha * (-log_pi - self.target_entropy).detach()).mean()\n",
+        "       # alpha_loss = (self.log_alpha * (-log_pi - self.target_entropy).detach()).mean()\n",
         "\n",
-        "        self.alpha_optim.zero_grad()\n",
-        "        alpha_loss.backward()\n",
-        "        self.alpha_optim.step()\n",
-        "        self.alpha = self.log_alpha.exp()\n",
+        "        #self.alpha_optim.zero_grad()\n",
+        "        #alpha_loss.backward()\n",
+        "        #self.alpha_optim.step()\n",
+        "        #self.alpha = self.log_alpha.exp()\n",
         "        #Ende Aufgabe 2\n",
         "        self.update_step += 1"
       ],
-      "execution_count": 30,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -447,24 +446,24 @@
         "agent = SACAgent(env, gamma, tau, alpha, q_lr, p_lr, a_lr, buffer_maxlen)\n",
         "\n",
         "# train\n",
-        "episode_rewards = mini_batch_train(env, agent, 10, 500, 64)"
+        "episode_rewards = mini_batch_train(env, agent, 50, 500, 64)"
       ],
-      "execution_count": 31,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Episode 0: -1625.2501556654033\n",
-            "Episode 1: -1301.3473248240052\n",
-            "Episode 2: -1184.3456148167388\n",
-            "Episode 3: -1563.3529550155645\n",
-            "Episode 4: -1352.1691877181577\n",
-            "Episode 5: -1779.9231769425564\n",
-            "Episode 6: -1187.5441732092947\n",
-            "Episode 7: -1257.384335106917\n",
-            "Episode 8: -1434.148479431876\n",
-            "Episode 9: -942.3971278978319\n"
+            "Episode 0: -1270.128283388741\n",
+            "Episode 1: -1065.6974119604\n",
+            "Episode 2: -1492.5607936108547\n",
+            "Episode 3: -1584.81732943528\n",
+            "Episode 4: -1128.0246106034788\n",
+            "Episode 5: -1694.7773553093232\n",
+            "Episode 6: -1806.0802738435655\n",
+            "Episode 7: -1783.4458953894853\n",
+            "Episode 8: -1074.216206612639\n",
+            "Episode 9: -1606.146012572171\n"
           ]
         }
       ]
@@ -479,14 +478,14 @@
       "source": [
         "%tensorboard --logdir runs"
       ],
-      "execution_count": 32,
+      "execution_count": 41,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "UsageError: Line magic function `%tensorboard` not found.\n"
-          ]
+          "output_type": "display_data",
+          "data": {
+            "text/plain": "Launching TensorBoard..."
+          },
+          "metadata": {}
         }
       ]
     },
