--- a/Code/SAC2019 _ohneLoesung.ipynb
+++ b/Code/SAC2019 _ohneLoesung.ipynb
@@ -23,9 +23,9 @@
       "source": [
         "# Aufgaben:\n",
         "\n",
-        "1) Verändere den Temperatur Wert (alpha) und schaue, wie sich die Ergebnisse verändern.\n",
+        "1) Verändere den Temperatur Wert (alpha) und schaue, wie sich die Ergebnisse verändern. \n",
         "\n",
-        "2) Erweitere den Agenten um einen lerndenden Temperture Wert. Implementiere dazu unter Aufgabe 2 für den alpha Wert die Loss Funktion. Im Agent ist dazu mit traget_entropie, log_alpha und alpha_optim mögliche Hilfen gegeben. "
+        "2) Erweitere den Agenten um einen lerndenden Temperture Wert. Implementiere dazu unter Aufgabe 2 für alpha Wert gradient descend. Im Agent ist dazu mit traget_entropie, log_alpha und alpha_optim mögliche Hilfen gegeben. "
       ],
       "cell_type": "markdown",
       "metadata": {}
