--- a/beamer/SACbeamer.tex
+++ b/beamer/SACbeamer.tex
@@ -38,7 +38,7 @@
 
 \section{Literaturverzeichnis}
 \begin{frame}
-{\footnotesize
+{\scriptsize
 \nocite{SAC19}
 \nocite{SAC18}
 \nocite{autoencoding}
