--- a/Code/SAC2019 _ohneLoesung.ipynb
+++ b/Code/SAC2019 _ohneLoesung.ipynb
@@ -9,12 +9,12 @@
       "collapsed_sections": []
     },
     "kernelspec": {
-      "name": "python389jvsc74a57bd033ee8eece5f3ee989075523e01824afdd88902ac6b6e4849e4afb282b00428e5",
-      "display_name": "Python 3.8.9 64-bit"
+      "name": "python389jvsc74a57bd0bb89f0cceb276c1630f92485392944946aadb4c6c0e4f16bc05894307ee7c700",
+      "display_name": "Python 3.8.9 64-bit (windows store)"
     },
     "metadata": {
       "interpreter": {
-        "hash": "33ee8eece5f3ee989075523e01824afdd88902ac6b6e4849e4afb282b00428e5"
+        "hash": "bb89f0cceb276c1630f92485392944946aadb4c6c0e4f16bc05894307ee7c700"
       }
     }
   },
@@ -49,7 +49,7 @@
         "from collections import deque\n",
         "from torch.utils.tensorboard import SummaryWriter"
       ],
-      "execution_count": 33,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -80,9 +80,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 21,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The tensorboard extension is already loaded. To reload it, use:\n  %reload_ext tensorboard\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "%load_ext tensorboard"
@@ -94,48 +102,6 @@
       ],
       "cell_type": "markdown",
       "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "G29sGsAVQl-s",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def mini_batch_train(env, agent, max_episodes, max_steps, batch_size):\n",
-        "    episode_rewards = []\n",
-        "    update_step = 0\n",
-        "    writer = SummaryWriter()\n",
-        "\n",
-        "    for episode in range(max_episodes):\n",
-        "        state = env.reset()\n",
-        "        episode_reward = 0\n",
-        "\n",
-        "        for step in range(max_steps):\n",
-        "            action = agent.get_action(state)\n",
-        "            next_state, reward, done, _ = env.step(action)\n",
-        "            agent.replay_buffer.push(state, action, reward, next_state, done)\n",
-        "            episode_reward += reward\n",
-        "\n",
-        "            if len(agent.replay_buffer) > batch_size:\n",
-        "                agent.update(batch_size)\n",
-        "                update_step += 1\n",
-        "\n",
-        "            if done or step == max_steps-1:\n",
-        "                episode_rewards.append(episode_reward)\n",
-        "                writer.add_scalar('reward',reward,episode)\n",
-        "                writer.flush()\n",
-        "                break\n",
-        "\n",
-        "            state = next_state\n",
-        "        \n",
-        "        print(\"Episode \" + str(episode) + \": \" + str(episode_reward))\n",
-        "\n",
-        "    return episode_rewards"
-      ],
-      "execution_count": 36,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -184,7 +150,7 @@
         "  def __len__(self):\n",
         "      return len(self.buffer)"
       ],
-      "execution_count": 37,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -202,25 +168,6 @@
         "colab": {}
       },
       "source": [
-        "class ValueNetwork(nn.Module):\n",
-        "\n",
-        "    def __init__(self, input_dim, output_dim, init_w=3e-3):\n",
-        "        super(ValueNetwork, self).__init__()\n",
-        "        self.fc1 = nn.Linear(input_dim, 256)\n",
-        "        self.fc2 = nn.Linear(256, 256)\n",
-        "        self.fc3 = nn.Linear(256, output_dim)\n",
-        "\n",
-        "        self.fc3.weight.data.uniform_(-init_w, init_w)\n",
-        "        self.fc3.bias.data.uniform_(-init_w, init_w)\n",
-        "\n",
-        "    def forward(self, state):\n",
-        "        x = F.relu(self.fc1(state))\n",
-        "        x = F.relu(self.fc2(x))\n",
-        "        x = self.fc3(x)\n",
-        "\n",
-        "        return x\n",
-        "\n",
-        "\n",
         "class SoftQNetwork(nn.Module):\n",
         "    \n",
         "    def __init__(self, num_inputs, num_actions, hidden_size=256, init_w=3e-3):\n",
@@ -281,7 +228,7 @@
         "\n",
         "        return action, log_pi"
       ],
-      "execution_count": 38,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -411,7 +358,7 @@
         "        #Ende Aufgabe 2\n",
         "        self.update_step += 1"
       ],
-      "execution_count": 39,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -420,6 +367,50 @@
       ],
       "cell_type": "markdown",
       "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G29sGsAVQl-s",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def mini_batch_train(env, agent, max_episodes, max_steps, batch_size):\n",
+        "    episode_rewards = []\n",
+        "    update_step = 0\n",
+        "    writer = SummaryWriter()\n",
+        "\n",
+        "    for episode in range(max_episodes):\n",
+        "        state = env.reset()\n",
+        "        episode_reward = 0\n",
+        "\n",
+        "        for step in range(max_steps):\n",
+        "            action = agent.get_action(state)\n",
+        "            next_state, reward, done, _ = env.step(action)\n",
+        "            agent.replay_buffer.push(state, action, reward, next_state, done)\n",
+        "            episode_reward += reward\n",
+        "\n",
+        "            if len(agent.replay_buffer) > batch_size:\n",
+        "                agent.update(batch_size)\n",
+        "                update_step += 1\n",
+        "\n",
+        "            if done or step == max_steps-1:\n",
+        "                episode_rewards.append(episode_reward)\n",
+        "                writer.add_scalar('episode_reward',reward,episode)\n",
+        "                print(\"Episode \" + str(episode) + \": \" + str(episode_rewards)) \n",
+        "                writer.flush()\n",
+        "\n",
+        "                \n",
+        "                break\n",
+        "\n",
+        "            state = next_state\n",
+        "        \n",
+        "\n",
+        "    return episode_rewards"
+      ],
+      "execution_count": 25,
+      "outputs": []
     },
     {
       "source": [],
@@ -439,24 +430,26 @@
         "agent = SACAgent(env, gamma, tau, alpha, q_lr, p_lr, a_lr, buffer_maxlen)\n",
         "\n",
         "# train\n",
-        "episode_rewards = mini_batch_train(env, agent, 50, 500, 64)"
+        "episode_rewards = mini_batch_train(env, agent, 12, 500, 64)"
       ],
-      "execution_count": 40,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Episode 0: -1270.128283388741\n",
-            "Episode 1: -1065.6974119604\n",
-            "Episode 2: -1492.5607936108547\n",
-            "Episode 3: -1584.81732943528\n",
-            "Episode 4: -1128.0246106034788\n",
-            "Episode 5: -1694.7773553093232\n",
-            "Episode 6: -1806.0802738435655\n",
-            "Episode 7: -1783.4458953894853\n",
-            "Episode 8: -1074.216206612639\n",
-            "Episode 9: -1606.146012572171\n"
+            "Episode 0: [-1399.2252086940746]\n",
+            "Episode 1: [-1399.2252086940746, -1557.523745459023]\n",
+            "Episode 2: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518]\n",
+            "Episode 3: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455]\n",
+            "Episode 4: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455, -1832.7013976623948]\n",
+            "Episode 5: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455, -1832.7013976623948, -1702.316186141821]\n",
+            "Episode 6: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455, -1832.7013976623948, -1702.316186141821, -1350.4972525653754]\n",
+            "Episode 7: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455, -1832.7013976623948, -1702.316186141821, -1350.4972525653754, -882.217281411034]\n",
+            "Episode 8: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455, -1832.7013976623948, -1702.316186141821, -1350.4972525653754, -882.217281411034, -1552.950222777444]\n",
+            "Episode 9: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455, -1832.7013976623948, -1702.316186141821, -1350.4972525653754, -882.217281411034, -1552.950222777444, -1618.2155065074762]\n",
+            "Episode 10: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455, -1832.7013976623948, -1702.316186141821, -1350.4972525653754, -882.217281411034, -1552.950222777444, -1618.2155065074762, -1345.6088885449728]\n",
+            "Episode 11: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455, -1832.7013976623948, -1702.316186141821, -1350.4972525653754, -882.217281411034, -1552.950222777444, -1618.2155065074762, -1345.6088885449728, -892.4013603022297]\n"
           ]
         }
       ]
@@ -471,7 +464,7 @@
       "source": [
         "%tensorboard --logdir runs"
       ],
-      "execution_count": 41,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "display_data",
