--- a/beamer/Part_1.tex
+++ b/beamer/Part_1.tex
@@ -35,7 +35,7 @@
 \begin{frame}{Entropie}
 	\begin{itemize}
 		
-		\item Durch die Maximierung der Entropie werden Aktionen mit ähnlichen Q-values ähnlich oft ausgewählt.
+		\item Durch die Maximierung der Entropie werden Aktionen mit ähnlichen Q-values ähnlich oft ausgewählt
 		\item Die ausgewählte Aktion ist damit möglichst zufällig
 	\end{itemize} 
 \end{frame}
