changes in colab

--- a/Code/SAC2019 _ohneLoesung.ipynb
+++ b/Code/SAC2019 _ohneLoesung.ipynb
@@ -49,7 +49,7 @@
         "from collections import deque\n",
         "from torch.utils.tensorboard import SummaryWriter"
       ],
-      "execution_count": 19,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 74,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -71,7 +71,7 @@
         "gamma = 0.99\n",
         "tau = 0.01\n",
         "#Aufgabe 1\n",
-        "alpha = 0.2\n",
+        "alpha = 0.8\n",
         "a_lr = 3e-4\n",
         "q_lr = 3e-4\n",
         "p_lr = 3e-4\n",
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 75,
       "metadata": {},
       "outputs": [
         {
@@ -150,7 +150,7 @@
         "  def __len__(self):\n",
         "      return len(self.buffer)"
       ],
-      "execution_count": 22,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -228,7 +228,7 @@
         "\n",
         "        return action, log_pi"
       ],
-      "execution_count": 23,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -358,7 +358,7 @@
         "        #Ende Aufgabe 2\n",
         "        self.update_step += 1"
       ],
-      "execution_count": 24,
+      "execution_count": 78,
       "outputs": []
     },
     {
@@ -376,10 +376,10 @@
         "colab": {}
       },
       "source": [
-        "def mini_batch_train(env, agent, max_episodes, max_steps, batch_size):\n",
+        "def mini_batch_train(run_id,env, agent, max_episodes, max_steps, batch_size):\n",
         "    episode_rewards = []\n",
         "    update_step = 0\n",
-        "    writer = SummaryWriter()\n",
+        "    writer = SummaryWriter(\"./runs/\" + run_id)\n",
         "\n",
         "    for episode in range(max_episodes):\n",
         "        state = env.reset()\n",
@@ -397,11 +397,9 @@
         "\n",
         "            if done or step == max_steps-1:\n",
         "                episode_rewards.append(episode_reward)\n",
-        "                writer.add_scalar('episode_reward',reward,episode)\n",
-        "                print(\"Episode \" + str(episode) + \": \" + str(episode_rewards)) \n",
-        "                writer.flush()\n",
-        "\n",
-        "                \n",
+        "                writer.add_scalar('episode_reward',episode_reward,episode)\n",
+        "                print(\"Episode \" + str(episode) + \": \" + str(episode_reward)) \n",
+        "                writer.flush()              \n",
         "                break\n",
         "\n",
         "            state = next_state\n",
@@ -409,13 +407,8 @@
         "\n",
         "    return episode_rewards"
       ],
-      "execution_count": 25,
+      "execution_count": 79,
       "outputs": []
-    },
-    {
-      "source": [],
-      "cell_type": "markdown",
-      "metadata": {}
     },
     {
       "cell_type": "code",
@@ -428,28 +421,66 @@
         "env = gym.make(\"Pendulum-v0\")\n",
         "\n",
         "agent = SACAgent(env, gamma, tau, alpha, q_lr, p_lr, a_lr, buffer_maxlen)\n",
-        "\n",
+        "run_id = 'run_id'\n",
         "# train\n",
-        "episode_rewards = mini_batch_train(env, agent, 12, 500, 64)"
+        "episode_rewards = mini_batch_train(run_id,env, agent, 50, 500, 64)"
       ],
-      "execution_count": 26,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Episode 0: [-1399.2252086940746]\n",
-            "Episode 1: [-1399.2252086940746, -1557.523745459023]\n",
-            "Episode 2: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518]\n",
-            "Episode 3: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455]\n",
-            "Episode 4: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455, -1832.7013976623948]\n",
-            "Episode 5: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455, -1832.7013976623948, -1702.316186141821]\n",
-            "Episode 6: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455, -1832.7013976623948, -1702.316186141821, -1350.4972525653754]\n",
-            "Episode 7: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455, -1832.7013976623948, -1702.316186141821, -1350.4972525653754, -882.217281411034]\n",
-            "Episode 8: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455, -1832.7013976623948, -1702.316186141821, -1350.4972525653754, -882.217281411034, -1552.950222777444]\n",
-            "Episode 9: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455, -1832.7013976623948, -1702.316186141821, -1350.4972525653754, -882.217281411034, -1552.950222777444, -1618.2155065074762]\n",
-            "Episode 10: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455, -1832.7013976623948, -1702.316186141821, -1350.4972525653754, -882.217281411034, -1552.950222777444, -1618.2155065074762, -1345.6088885449728]\n",
-            "Episode 11: [-1399.2252086940746, -1557.523745459023, -1680.9041540806518, -1747.4081281023455, -1832.7013976623948, -1702.316186141821, -1350.4972525653754, -882.217281411034, -1552.950222777444, -1618.2155065074762, -1345.6088885449728, -892.4013603022297]\n"
+            "Episode 0: -882.2469893690885\n",
+            "Episode 1: -1071.0734036681934\n",
+            "Episode 2: -1445.0881849561933\n",
+            "Episode 3: -1538.4513892349885\n",
+            "Episode 4: -1165.7530725722668\n",
+            "Episode 5: -1117.3509418295735\n",
+            "Episode 6: -1503.5490798804262\n",
+            "Episode 7: -1190.5727054570334\n",
+            "Episode 8: -1218.0715221615535\n",
+            "Episode 9: -1514.1547558879083\n",
+            "Episode 10: -1158.2968911815449\n",
+            "Episode 11: -1262.9835471630897\n",
+            "Episode 12: -950.8941681822837\n",
+            "Episode 13: -916.9701690640612\n",
+            "Episode 14: -750.8139509964824\n",
+            "Episode 15: -978.1273758065429\n",
+            "Episode 16: -865.9582178684085\n",
+            "Episode 17: -861.2565896802265\n",
+            "Episode 18: -872.3247677338261\n",
+            "Episode 19: -874.2862013185883\n",
+            "Episode 20: -792.7309818790524\n",
+            "Episode 21: -1027.3535727096266\n",
+            "Episode 22: -903.6818764562936\n",
+            "Episode 23: -917.4173208233597\n",
+            "Episode 24: -903.4282655476172\n",
+            "Episode 25: -994.8516615631793\n",
+            "Episode 26: -1155.6346426244843\n",
+            "Episode 27: -1147.9126493842216\n",
+            "Episode 28: -1292.0332675522852\n",
+            "Episode 29: -1019.0509347181829\n",
+            "Episode 30: -1292.5205744897653\n",
+            "Episode 31: -1201.1460939267292\n",
+            "Episode 32: -1185.666459793949\n",
+            "Episode 33: -1057.6159643598116\n",
+            "Episode 34: -834.1983673921948\n",
+            "Episode 35: -960.5741582472466\n",
+            "Episode 36: -1036.2538117864972\n",
+            "Episode 37: -383.102259156973\n",
+            "Episode 38: -373.88345927568986\n",
+            "Episode 39: -251.5538913372644\n",
+            "Episode 40: -757.4930019645534\n",
+            "Episode 41: -120.09637833870785\n",
+            "Episode 42: -358.91564639176954\n",
+            "Episode 43: -370.46873413196397\n",
+            "Episode 44: -237.28926879956344\n",
+            "Episode 45: -2.3274081256239945\n",
+            "Episode 46: -120.76355632491905\n",
+            "Episode 47: -129.71723330818472\n",
+            "Episode 48: -124.2411900241523\n",
+            "Episode 49: -124.29840331439101\n"
           ]
         }
       ]
@@ -464,7 +495,7 @@
       "source": [
         "%tensorboard --logdir runs"
       ],
-      "execution_count": 27,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "display_data",
