--- a/beamer/Part_3.tex
+++ b/beamer/Part_3.tex
@@ -40,7 +40,7 @@
 
 \begin{frame}
     \frametitle{Ergebnisse}
-    \includegraphics[width=.3\textwidth, height=0.4\textheight]{figures/rllab/Humanoid-v1.PNG}\hfill
+    % \includegraphics[width=.3\textwidth, height=0.4\textheight]{figures/rllab/Humanoid-v1.PNG}\hfill
     \includegraphics[width=.3\textwidth, height=0.4\textheight]{figures/rllab/Humanoid-v2.PNG}\hfill
     \includegraphics[width=.3\textwidth, height=0.4\textheight]{figures/rllab/halcheeathPNG.PNG}
 
