--- a/Code/SAC2019 _ohneLoesung.ipynb
+++ b/Code/SAC2019 _ohneLoesung.ipynb
@@ -23,6 +23,8 @@
       "source": [
         "# Aufgaben:\n",
         "\n",
+        "Beim Ausführen nicht vergessen die run_id zu verändern, damit man die Ergebnisse vergleichen kann.\n",
+        "\n",
         "1) Verändere den Temperatur Wert (alpha) und schaue, wie sich die Ergebnisse verändern. \n",
         "\n",
         "2) Erweitere den Agenten um einen lerndenden Temperture Wert. Implementiere dazu unter Aufgabe 2 für alpha Wert gradient descend. Im Agent ist dazu mit traget_entropie, log_alpha und alpha_optim mögliche Hilfen gegeben. "
@@ -54,29 +56,10 @@
     },
     {
       "source": [
-        "# Initialize Parameter"
+        "# Start Tensorboard"
       ],
       "cell_type": "markdown",
       "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 74,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "\n",
-        "\n",
-        "# SAC Params\n",
-        "gamma = 0.99\n",
-        "tau = 0.01\n",
-        "#Aufgabe 1\n",
-        "alpha = 0.8\n",
-        "a_lr = 3e-4\n",
-        "q_lr = 3e-4\n",
-        "p_lr = 3e-4\n",
-        "buffer_maxlen = 1000000\n"
-      ]
     },
     {
       "cell_type": "code",
@@ -279,7 +262,7 @@
         "        self.q2_optimizer = optim.Adam(self.q_net2.parameters(), lr=q_lr)\n",
         "        self.policy_optimizer = optim.Adam(self.policy_net.parameters(), lr=policy_lr)\n",
         "\n",
-        "        # entropy temperature\n",
+        "        # entropy temperature. Diese Objekte können für Aufgabe 2 verwendet werden.\n",
         "        self.alpha = alpha\n",
         "        self.target_entropy = -torch.prod(torch.Tensor(self.env.action_space.shape).to(self.device)).item()\n",
         "        self.log_alpha = torch.zeros(1, requires_grad=True, device=self.device)\n",
@@ -409,6 +392,30 @@
       ],
       "execution_count": 79,
       "outputs": []
+    },
+    {
+      "source": [
+        "# Initialize Parameter"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# SAC Params\n",
+        "gamma = 0.99\n",
+        "tau = 0.01\n",
+        "#Aufgabe 1\n",
+        "alpha = 0.8\n",
+        "a_lr = 3e-4\n",
+        "q_lr = 3e-4\n",
+        "p_lr = 3e-4\n",
+        "buffer_maxlen = 1000000"
+      ]
     },
     {
       "cell_type": "code",
