--- a/Code/SAC2019.ipynb
+++ b/Code/SAC2019.ipynb
@@ -9,12 +9,12 @@
       "collapsed_sections": []
     },
     "kernelspec": {
-      "name": "python389jvsc74a57bd033ee8eece5f3ee989075523e01824afdd88902ac6b6e4849e4afb282b00428e5",
-      "display_name": "Python 3.8.9 64-bit"
+      "name": "python389jvsc74a57bd0bb89f0cceb276c1630f92485392944946aadb4c6c0e4f16bc05894307ee7c700",
+      "display_name": "Python 3.8.9 64-bit (windows store)"
     },
     "metadata": {
       "interpreter": {
-        "hash": "33ee8eece5f3ee989075523e01824afdd88902ac6b6e4849e4afb282b00428e5"
+        "hash": "bb89f0cceb276c1630f92485392944946aadb4c6c0e4f16bc05894307ee7c700"
       }
     }
   },
@@ -26,6 +26,13 @@
         "1) Verändere den Temperatur Wert (alpha) und schaue, wie sich die Ergebnisse verändern.\n",
         "\n",
         "2) Erweitere den Agenten um einen lerndenden Temperture Wert. Implementiere dazu unter Aufgabe 2 für den alpha Wert die Loss Funktion. Im Agent ist dazu mit traget_entropie, log_alpha und alpha_optim mögliche Hilfen gegeben. "
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "source": [
+        "# Imports"
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -49,51 +56,33 @@
         "from collections import deque\n",
         "from torch.utils.tensorboard import SummaryWriter"
       ],
-      "execution_count": 33,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "source": [
-        "# Initialize Parameter"
+        "# Start Tensorboard"
       ],
       "cell_type": "markdown",
       "metadata": {}
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 19,
       "metadata": {},
-      "outputs": [],
-      "source": [
-        "\n",
-        "\n",
-        "# SAC Params\n",
-        "gamma = 0.99\n",
-        "tau = 0.01\n",
-        "#Aufgabe 1\n",
-        "alpha = 0.2\n",
-        "a_lr = 3e-4\n",
-        "q_lr = 3e-4\n",
-        "p_lr = 3e-4\n",
-        "buffer_maxlen = 1000000\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 35,
-      "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The tensorboard extension is already loaded. To reload it, use:\n  %reload_ext tensorboard\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "%load_ext tensorboard"
       ]
-    },
-    {
-      "source": [
-        "# Batch Train"
-      ],
-      "cell_type": "markdown",
-      "metadata": {}
     },
     {
       "cell_type": "code",
@@ -124,17 +113,17 @@
         "\n",
         "            if done or step == max_steps-1:\n",
         "                episode_rewards.append(episode_reward)\n",
-        "                writer.add_scalar('reward',reward,episode)\n",
-        "                writer.flush()\n",
+        "            \n",
         "                break\n",
         "\n",
         "            state = next_state\n",
-        "        \n",
+        "        writer.add_scalar('episode_reward',episode_reward,episode)\n",
+        "        writer.flush()\n",
         "        print(\"Episode \" + str(episode) + \": \" + str(episode_reward))\n",
         "\n",
         "    return episode_rewards"
       ],
-      "execution_count": 36,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -184,7 +173,7 @@
         "  def __len__(self):\n",
         "      return len(self.buffer)"
       ],
-      "execution_count": 37,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -281,7 +270,7 @@
         "\n",
         "        return action, log_pi"
       ],
-      "execution_count": 38,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -416,7 +405,7 @@
         "        #Ende Aufgabe 2\n",
         "        self.update_step += 1"
       ],
-      "execution_count": 39,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -425,6 +414,25 @@
       ],
       "cell_type": "markdown",
       "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "\n",
+        "# SAC Params\n",
+        "gamma = 0.99\n",
+        "tau = 0.01\n",
+        "#Aufgabe 1\n",
+        "alpha = 0.2\n",
+        "a_lr = 3e-4\n",
+        "q_lr = 3e-4\n",
+        "p_lr = 3e-4\n",
+        "buffer_maxlen = 1000000\n"
+      ]
     },
     {
       "source": [],
@@ -446,22 +454,30 @@
         "# train\n",
         "episode_rewards = mini_batch_train(env, agent, 50, 500, 64)"
       ],
-      "execution_count": 40,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Episode 0: -1270.128283388741\n",
-            "Episode 1: -1065.6974119604\n",
-            "Episode 2: -1492.5607936108547\n",
-            "Episode 3: -1584.81732943528\n",
-            "Episode 4: -1128.0246106034788\n",
-            "Episode 5: -1694.7773553093232\n",
-            "Episode 6: -1806.0802738435655\n",
-            "Episode 7: -1783.4458953894853\n",
-            "Episode 8: -1074.216206612639\n",
-            "Episode 9: -1606.146012572171\n"
+            "Episode 0: -834.5441998009676\n",
+            "Episode 1: -883.5991394288724\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[1;32m<ipython-input-25-1b830e6b8c2e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# train\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mepisode_rewards\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmini_batch_train\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0magent\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m50\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m500\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m64\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[1;32m<ipython-input-20-fa5d66c9b07d>\u001b[0m in \u001b[0;36mmini_batch_train\u001b[1;34m(env, agent, max_episodes, max_steps, batch_size)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0magent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplay_buffer\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m                 \u001b[0magent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m                 \u001b[0mupdate_step\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;32m<ipython-input-23-659b37c53e7b>\u001b[0m in \u001b[0;36mupdate\u001b[1;34m(self, batch_size)\u001b[0m\n\u001b[0;32m     87\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     88\u001b[0m         \u001b[1;31m# delayed update for policy network and target q networks\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 89\u001b[1;33m         \u001b[0mnew_actions\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlog_pi\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpolicy_net\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msample\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstates\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     90\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate_step\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdelay_step\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     91\u001b[0m             min_q = torch.min(\n",
+            "\u001b[1;32m<ipython-input-22-7e1cdc442b20>\u001b[0m in \u001b[0;36msample\u001b[1;34m(self, state, epsilon)\u001b[0m\n\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0msample\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstate\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepsilon\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1e-6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 68\u001b[1;33m         \u001b[0mmean\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlog_std\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     69\u001b[0m         \u001b[0mstd\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlog_std\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     70\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;32m<ipython-input-22-7e1cdc442b20>\u001b[0m in \u001b[0;36mforward\u001b[1;34m(self, state)\u001b[0m\n\u001b[0;32m     56\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m         \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mF\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrelu\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinear1\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m         \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mF\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrelu\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinear2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\torch\\nn\\functional.py\u001b[0m in \u001b[0;36mrelu\u001b[1;34m(input, inplace)\u001b[0m\n\u001b[0;32m   1204\u001b[0m         \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrelu_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1205\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1206\u001b[1;33m         \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrelu\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1207\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1208\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ]
@@ -476,7 +492,7 @@
       "source": [
         "%tensorboard --logdir runs"
       ],
-      "execution_count": 41,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
