--- a/beamer/Bibliography.bib
+++ b/beamer/Bibliography.bib
@@ -60,9 +60,7 @@ edition = {1st}
 }
 
 @misc{picturesrllab,
-  author       = {Sam Kirkles},
-  title        = {HalfCheetah},
-  howpublished = {Youtube},
-  year         = {2018},
-  url          = {https://www.youtube.com/watch?v=2lf-3tgWiUc}   
+  author       = {Open AI},
+  title        = {Open AI Environments},
+  url          = {https://gym.openai.com/envs/#mujoco}   
 }
