--- a/beamer/Bibliography.bib
+++ b/beamer/Bibliography.bib
@@ -64,3 +64,19 @@ edition = {1st}
   title        = {Open AI Environments},
   url          = {https://gym.openai.com/envs/#mujoco}   
 }
+
+@article{FuncApp,
+  author    = {Scott Fujimoto and
+               Herke van Hoof and
+               David Meger},
+  title     = {Addressing Function Approximation Error in Actor-Critic Methods},
+  journal   = {CoRR},
+  volume    = {abs/1802.09477},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1802.09477},
+  archivePrefix = {arXiv},
+  eprint    = {1802.09477},
+  timestamp = {Sat, 28 Sep 2019 00:58:01 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1802-09477.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
