--- a/beamer/SACbeamer.tex
+++ b/beamer/SACbeamer.tex
@@ -39,10 +39,10 @@
 \section{Literaturverzeichnis}
 \begin{frame}
 {\scriptsize
-\nocite{SAC19}
 \nocite{SAC18}
 \nocite{autoencoding}
 \nocite{grokking}
+\nocite{FuncApp}
 \bibliography{Bibliography}
 \bibliographystyle{alpha}}
 \end{frame}
